--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Ap01lY0n.github.io/goit-js-hw-11", 
+  "homepage": "https://Ap01lY0n.github.io/goit-js-hw-11",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
@@ -21,8 +21,10 @@
     "@slim-select/vue": "^1.6.0",
     "axios": "^1.5.0",
     "flatpickr": "^4.6.13",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
+    "simplelightbox": "^2.14.2",
     "slim-select": "^2.6.0"
   },
   "devDependencies": {
