--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@slim-select/vue": "^1.6.0",
     "axios": "^1.5.0",
     "flatpickr": "^4.6.13",
+    "intersection-observer": "^0.12.2",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
